# spotify-favorites-fixer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  fix_spotify_favorites.py  pyproject.toml  setup.cfg  test_fix_spotify_favorites.py
.github/workflows/: ci.yml
