[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_favorites_fixer"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Douglas Thor"},  # so that package core metadata "Author" field gets populated.
    {name = "Douglas Thor", email = "doug.thor@gmail.com"},
]
maintainers = []
keywords = []
classifiers = []
dependencies = [
    "spotipy == 2.20.0",
]

[project.optional-dependencies]
develop = [
    "pytest == 7.1.3",
    "pre-commit == 2.20.0",
]

[project.scripts]

[project.urls]
"Source Code" = "https://github.com/dougthor42/spotify-favorites-fixer"
"Changelog" = "https://github.com/dougthor42/spotify-favorites-fixer/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/dougthor42/spotify-favorites-fixer/issues"

[tool.setuptools]
py-modules = ["fix_spotify_favorites"]
